test/corpus/heredoc.txt
================================================================================
heredoc static
================================================================================
$a = @(END)
This is the text that gets assigned to $a.
And this too.
END
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc with interpolation and escape
================================================================================
$gitconfig = @("GITCONFIG"/L)
    [user]
        name = ${displayname}
        email = ${email}
    [color]
        ui = true
    [alias]
        lg = "log --pretty=format:'%C(yellow)%h%C(reset) %s \
    %C(cyan)%cr%C(reset) %C(blue)%an%C(reset) %C(green)%d%C(reset)' --graph"
        wdiff = diff --word-diff=color --ignore-space-at-eol \
    --word-diff-regex='[[:alnum:]]+|[^[:space:][:alnum:]]+'
    [merge]
        defaultToUpstream = true
    [push]
        default = upstream
    | GITCONFIG
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (interpolation)
    (heredoc_content)
    (interpolation)
    (heredoc_content)
    (escape_sequence)
    (heredoc_content)
    (escape_sequence)
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc with short interpolation
================================================================================
$gitconfig = @("GITCONFIG"/L)
    name = ${displayname}
    | GITCONFIG
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (interpolation)
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc short
================================================================================
$g = @(Foo)
foobar
next
Foo
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc empty
================================================================================
$g = @(empty)
empty
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_body_end)))

================================================================================
heredoc with tag prefix in data
================================================================================
$g = @(FOOBAR)
FOOBARDATA
FOOBAR
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc with multibyte character in data
================================================================================
$g = @(FOOBAR)
😀
FOOBAR
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc in a function call
================================================================================
notice(@(ONE))
    This is the text for one heredoc
    | ONE
--------------------------------------------------------------------------------

(manifest
  (statement
    (statement_function
      (name)
      (argument_list
        (argument
          (heredoc_start)))))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
two heredocs in a function call
================================================================================
notice(@(FIRST), @(SECOND))
    This is the text for the first heredoc
    | FIRST
    This is the text for the second
    | SECOND
--------------------------------------------------------------------------------

(manifest
  (statement
    (statement_function
      (name)
      (argument
        (heredoc_start))
      (argument
        (heredoc_start))))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
two heredocs in a multi-line function call
================================================================================
notice(@(FIRST),
    This is the text for the first heredoc
    | FIRST
@(SECOND))
    This is the text for the second
    | SECOND
--------------------------------------------------------------------------------

(manifest
  (statement
    (statement_function
      (name)
      (argument
        (heredoc_start))
      (heredoc_body
        (heredoc_content)
        (heredoc_body_end))
      (argument
        (heredoc_start))))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc with tag following interpolation
================================================================================
$g = @("EOF")
TEST${foo}EOF
EOF
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (interpolation)
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc with trim operator
================================================================================
$g = @("EOF")
TEST
-EOF
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))

================================================================================
heredoc with bogus trim operator
================================================================================
$g = @("EOF")
TEST
|--EOF
EOF
--------------------------------------------------------------------------------

(manifest
  (statement
    (variable
      (name))
    (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (heredoc_body_end)))
