test/corpus/literal.txt
================================================================================
numeric literals
================================================================================
$units = {
  'k' => 1024,
  'm' => 1048576,
  'g' => 1073741824,
  't' => 1099511627776,
  'p' => 1.12589991e15,
  'e' => 1.1529215E18,
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (variable
      (name))
    (hash
      (hashpair
        (single_quoted_string)
        (arrow)
        (number))
      (hashpair
        (single_quoted_string)
        (arrow)
        (number))
      (hashpair
        (single_quoted_string)
        (arrow)
        (number))
      (hashpair
        (single_quoted_string)
        (arrow)
        (number))
      (hashpair
        (single_quoted_string)
        (arrow)
        (number))
      (hashpair
        (single_quoted_string)
        (arrow)
        (number)))))

================================================================================
hexadecimal literals
================================================================================
0xff - 0X01
--------------------------------------------------------------------------------
(manifest
  (statement
    (binary
      (number)
      (number))))
