test/corpus/resource-defaults.txt
================================================================================
resource defaults
================================================================================
  File {
    mode  => '0644',
    owner => $user,
    group => $group,
  }

  Foo::File {
    mode  => '0644',
    requires => File['test']
  }
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_reference
    (type)
    (attribute_list
      (attribute
        (name)
        (arrow)
        (single_quoted_string))
      (attribute
        (name)
        (arrow)
        (variable
          (name)))
      (attribute
        (name)
        (arrow)
        (variable
          (name))))))
  (statement
    (resource_reference
    (type)
    (attribute_list
      (attribute
        (name)
        (arrow)
        (single_quoted_string))
      (attribute
        (name)
        (arrow)
        (type)
        (access
          (access_element
            (single_quoted_string))))))))
