test/corpus/resource-usage.txt
================================================================================
resource usage
================================================================================
package {'ntp':}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))))))

================================================================================
resource usage with arguments
================================================================================
package { 'ntp':
  ensure => 'installed',
  foo    => 'bar',
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))
        (attribute_list
          (attribute
            (name)
            (arrow)
            (string))
          (attribute
            (name)
            (arrow)
            (string)))))))

================================================================================
resource usage with element reference
================================================================================
foo { $_key['name']:
  enable => true,
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (variable
            (name))
          (access
            (access_element
            (string))))
        (attribute_list
          (attribute
            (name)
            (arrow)
            (true)))))))

================================================================================
resource usage with require
================================================================================
foo { 'bar':
  * => $_foo,
  require => Group['asdf']
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))
        (attribute_list
          (attribute
            (arrow)
            (variable
              (name)))
          (attribute
            (name)
            (arrow)
            (type)
            (access
              (access_element
                (string)))))))))

================================================================================
resource usage with multiple items
================================================================================
user {
  'alice':
    uid   => 1001,
    home  => '/home/alice',
  ;
  'bob':
    uid   => 1002,
    home  => '/home/bob',
  ;
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))
        (attribute_list
          (attribute
            (name)
            (arrow)
            (number))
          (attribute
            (name)
            (arrow)
            (string))))
      (resource_body
        (resource_title
          (string))
        (attribute_list
          (attribute
            (name)
            (arrow)
            (number))
          (attribute
            (name)
            (arrow)
            (string)))))))

================================================================================
resource usage with multiple items and default
================================================================================
user {
  'alice':
    uid   => 1001,
    home  => '/home/alice',
  ;
  'bob':
    uid   => 1002,
    home  => '/home/bob',
  ;
  default:
    groups => 'users'
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))
        (attribute_list
          (attribute
            (name)
            (arrow)
            (number))
          (attribute
            (name)
            (arrow)
            (string))))
      (resource_body
        (resource_title
          (string))
        (attribute_list
          (attribute
            (name)
            (arrow)
            (number))
          (attribute
            (name)
            (arrow)
            (string))))
      (resource_body
        (resource_title
          (default))
        (attribute_list
          (attribute
            (name)
            (arrow)
            (string)))))))
