test/corpus/statement-functions.txt
================================================================================
include
================================================================================
include ::base::linux
--------------------------------------------------------------------------------
(manifest
  (statement
    (statement_function
      (name)
      (argument_list
        (argument
          (name))))))

================================================================================
require list
================================================================================
require base::linux, apache
--------------------------------------------------------------------------------
(manifest
  (statement
    (statement_function
      (name)
      (argument_list
        (argument
          (name))
        (argument
          (name))))))

================================================================================
compositions include array
================================================================================
include ['base::linux', 'apache']
--------------------------------------------------------------------------------
(manifest
  (statement
    (statement_function
      (name)
      (argument_list
        (argument
          (array
            (array_element
              (single_quoted_string))
            (array_element
              (single_quoted_string))))))))

================================================================================
compositions include from variable
================================================================================
include $my_classes
--------------------------------------------------------------------------------
(manifest
  (statement
    (statement_function
      (name)
      (argument_list
        (argument
          (variable
            (name)))))))

================================================================================
compositions contain keyword
================================================================================
contain ::test::class::bar
--------------------------------------------------------------------------------
(manifest
  (statement
    (statement_function
      (name)
      (argument_list
        (argument
          (name))))))
